--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,7 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: make deploy-ropsten
+  script: make ropsten
   on:
     branch: master
     tags: true
-
-after_deploy:
-  - make github-deployment
-  - make verify-ropsten
