--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "solium": "./node_modules/.bin/solium --no-soliumignore -d contracts",
     "truffle": "./node_modules/.bin/truffle test",
     "deploy_ropsten": "./node_modules/.bin/truffle migrate --network ropsten",
-    "verify_ropsten": "./node_modules/.bin/truffle run verify --network ropsten --delay 30000 --verbose ./build/contracts/Atomex.json"
+    "deploy_mainnet": "./node_modules/.bin/truffle migrate --network mainnet",
+    "verify_ropsten": "./node_modules/.bin/truffle run verify --network ropsten --delay 30000 --verbose ./build/contracts/Atomex.json",
+    "verify_mainnet": "./node_modules/.bin/truffle run verify --network mainnet --delay 30000 --verbose ./build/contracts/Atomex.json"
   },
   "repository": {
     "type": "git",
