--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "truffle": "./node_modules/.bin/truffle test",
     "deploy_ropsten": "./node_modules/.bin/truffle migrate --network ropsten",
     "deploy_mainnet": "./node_modules/.bin/truffle migrate --network mainnet",
-    "verify_ropsten": "./node_modules/.bin/truffle run verify --network ropsten --delay 30000 --verbose ./build/contracts/Atomex.json",
-    "verify_mainnet": "./node_modules/.bin/truffle run verify --network mainnet --delay 30000 --verbose ./build/contracts/Atomex.json"
+    "verify_ropsten": "./node_modules/.bin/truffle run verify --network ropsten --delay 30000 ./build/contracts/Atomex.json",
+    "verify_mainnet": "./node_modules/.bin/truffle run verify --network mainnet --delay 30000 ./build/contracts/Atomex.json"
   },
   "repository": {
     "type": "git",
