--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mocha": "^8.3.2",
     "solium": "^1.2.5",
     "truffle": "^5.3.4",
-    "truffle-privatekey-provider": "^1.5.0"
+    "truffle-privatekey-provider": "^1.5.0",
+    "web3": "^1.3.5"
   },
   "devDependencies": {
     "truffle-plugin-verify": "^0.5.7"
