--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "10.16"
+  - "14.16"
 
 cache:
   directories:
@@ -18,11 +18,11 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: make deploy-ropsten
+#  script: make deploy-ropsten
   on:
-    branch: master
+    branch: watchTower
     tags: true
 
 after_deploy:
-  - make github-deployment
-  - npm run verify_ropsten
+#  - make github-deployment
+#  - npm run verify_ropsten
